--- a/_includes/agenda-items.html
+++ b/_includes/agenda-items.html
@@ -22,6 +22,7 @@
             <ul class="list-unstyled">
               <li>{% for date in item.datum %}<i class="fa fa-calendar"></i> <span class="date">{{date}}</span>{% endfor %}</li>
               <li><i class="fa fa-clock-o"></i> {% if item.tijd != null%}{{item.tijd}}{% else %} 09:30 - 16:30 uur{% endif %}{% if item.duur != null %}, {{item.duur}}{%endif%}</li>
+              <li><i class="fa fa-map-marker"></i><span class="location">{{item.locatie}}<span></li>
             </ul>
           </div>
           <div class="col-md-4">
