--- a/assets/css/3-sections/_nav.sass
+++ b/assets/css/3-sections/_nav.sass
@@ -47,6 +47,7 @@ nav.navbar-wrapper
         @media screen and (min-width: $screen-lg-min)
           max-height: 86px
   .navbar-nav
+    text-transform: lowercase
     @media screen and (max-width: $screen-xs-max)
       margin-top: 0px
     @media screen and (min-width: $screen-sm-min) and (max-width: $screen-sm-max)
