--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8315,28 +8315,30 @@ header.container-fluid {
         @media screen and (min-width: 1200px) {
           .navbar .navbar-header .navbar-brand img {
             max-height: 86px; } }
-  @media screen and (max-width: 767px) {
-    .navbar .navbar-nav {
-      margin-top: 0px; } }
-  @media screen and (min-width: 768px) and (max-width: 991px) {
-    .navbar .navbar-nav {
-      margin-top: 13px; } }
-  @media screen and (min-width: 992px) and (max-width: 1199px) {
-    .navbar .navbar-nav {
-      margin-top: 5px; } }
-  @media screen and (min-width: 1200px) {
-    .navbar .navbar-nav {
-      margin-top: 22px; } }
-  .navbar .navbar-nav li.active a {
-    color: #777654;
-    background-color: transparent; }
-  .navbar .navbar-nav li a {
-    font-weight: 600;
-    color: #bab6a3; }
+  .navbar .navbar-nav {
+    text-transform: lowercase; }
     @media screen and (max-width: 767px) {
-      .navbar .navbar-nav li a {
-        display: block;
-        text-align: center; } }
+      .navbar .navbar-nav {
+        margin-top: 0px; } }
+    @media screen and (min-width: 768px) and (max-width: 991px) {
+      .navbar .navbar-nav {
+        margin-top: 13px; } }
+    @media screen and (min-width: 992px) and (max-width: 1199px) {
+      .navbar .navbar-nav {
+        margin-top: 5px; } }
+    @media screen and (min-width: 1200px) {
+      .navbar .navbar-nav {
+        margin-top: 22px; } }
+    .navbar .navbar-nav li.active a {
+      color: #777654;
+      background-color: transparent; }
+    .navbar .navbar-nav li a {
+      font-weight: 600;
+      color: #bab6a3; }
+      @media screen and (max-width: 767px) {
+        .navbar .navbar-nav li a {
+          display: block;
+          text-align: center; } }
 
 @media screen and (max-width: 767px) {
   .navbar.navbar-default .navbar-header .navbar-brand {
